# MAGE-----Multi-Agent-Game-Tester

./: .env  .env.example  .env.template  .gitignore  Dockerfile  README.md  deep_scan.py  diagnose.py  docker-compose.yml  fix_encoding.py  pyproject.toml  requirements.txt  verify_structure.py
.github/workflows/: ci-cd.yml
agents/: advanced_strategies.py  analyzer_agent.py  executor_agent.py  orchestrator_agent.py  planner_agent.py  ranker_agent.py
backend/: fastapi.py  main.py  monitor_config.py  monitoring.py  report_generator.py  security.py  test_config.py
backend/core/: architecture.py  security_settings.py
frontend/: .dockerignore  .npmrc  Dockerfile  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
monitoring/grafana/dashboards/: mage-dashboard.json
reports/html/: comprehensive_report_20250928_043704.html  comprehensive_report_20250929_001619.html  comprehensive_report_20250929_001621.html  comprehensive_report_20250929_001628.html  comprehensive_report_20250929_001630.html  comprehensive_report_20250929_113620.html  comprehensive_report_20250929_113621.html  comprehensive_report_20250929_113622.html  comprehensive_report_20250929_121100.html  comprehensive_report_20250929_121101.html  comprehensive_report_20250929_121102.html
reports/templates/: report_template.json
src/: main.py
src/agents/models/: artifacts.py  test_report.py
src/agents/multi_agent/: orchestrator.py
src/agents/ranker/: algorithms.py  criteria.py  ranker_agent.py
src/agents/specialized/: ai_behaviour_agent.py  analyzer_agent.py  executor_agent.py  graphics_agent.py  performance_agent.py  planner_agent.py  security_agent.py
src/agents/validators/: __init__.py  cross_agent.py
src/api/: __init__.py  server.py
src/core/: __init__.py  ai_clients.py  ai_providers.py  config.py  encryption.py  exception_handler.py  implementations.py  logger.py
src/database/: __init__.py  advanced_operations.py  connection.py
src/gui/: __init__.py  main_window.py
src/gui/advanced/: advanced_main_window.py  advanced_theme.py  dashboard_widgets.py  functional_main_window.py  main_window_advanced.py  modern_control.py
src/gui/dialogs/: advanced_dialogs.py
src/gui/styles/: dark_theme.py
src/gui/widgets/: modern_widgets.py
src/reporting/: report_generator.py
src/security/: __init__.py  encryption.py
src/security/advanced/: enterprise_security.py
src/testing/: webdriver_integration.py
tests/: test_case.py  test_cross_agent_validator.py
