[tool.poetry]
name = "mage-tester"
version = "1.0.0"
description = "Multi-Agent Game Tester"
authors = ["jaynikam2005"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
numpy = "1.24.3"
pandas = "2.0.3"
langchain = "0.1.0"
pydantic = "2.5.0"
python-jose = "3.3.0"
passlib = "1.7.4"
python-multipart = "0.0.6"
sqlalchemy = "2.0.23"
playwright = "1.39.0"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
aiohttp = "3.9.0"
opencv-python-headless = "4.8.1.78"
python-dotenv = "1.0.0"
bcrypt = "4.0.1"
cryptography = "41.0.5"
aiosqlite = "0.19.0"
pillow = "10.1.0"
beautifulsoup4 = "4.12.2"
httpx = "0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"