[tool.poetry]
name = "multi-agent-game-tester"
version = "1.0.0"
description = "Advanced Multi-Agent Game Testing System with Desktop GUI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pyinstaller = "^6.16.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-community = "^0.0.12"
PyQt6 = "^6.6.1"
PyQt6-WebEngine = "^6.6.0"
playwright = "^1.40.0"
selenium = "^4.15.2"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
cryptography = "^41.0.7"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"
pillow = "^10.1.0"
opencv-python = "^4.8.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
typer = "^0.9.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
websockets = "^12.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
# Remove this line: pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game-tester = "src.main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true