[tool.poetry]
name = "multi-agent-game-tester"
version = "1.0.0"
description = "Advanced Multi-Agent Game Testing System"
authors = ["Developer <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.6.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game-tester = "src.main:sync_main"
